--- a/SustainSB/Base.lproj/Main.storyboard
+++ b/SustainSB/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,14 +21,30 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Santa Barbara" id="iQv-Jd-fey">
-                                        <barButtonItem key="leftBarButtonItem" title="Nav" id="pIl-pt-THG">
+                                        <barButtonItem key="leftBarButtonItem" title="Navies" id="pIl-pt-THG">
                                             <connections>
-                                                <action selector="iconsTapped:" destination="BYZ-38-t0r" id="6wR-Jx-JDv"/>
+                                                <action selector="iconsTapped:" destination="BYZ-38-t0r" id="OIf-gn-HkP"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Climate change is real. And it's happening all around us. It's up to you to make conscious, sustainable lifestyle choices.  " textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJo-oq-tcp">
+                                <rect key="frame" x="20" y="226" width="351" height="346"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="34"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bwK-VN-0ai">
+                                <rect key="frame" x="34" y="675" width="329" height="47"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="29"/>
+                                <state key="normal" title="[ Check out SustainSB! ]"/>
+                                <connections>
+                                    <segue destination="b4c-zE-CFX" kind="show" id="jCP-2n-V0c"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -35,12 +52,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="130"/>
+            <point key="canvasLocation" x="137.68115942028987" y="129.91071428571428"/>
         </scene>
-        <!--Nav Bar View Controller-->
+        <!--Left View Controller-->
         <scene sceneID="eM8-ps-3kI">
             <objects>
-                <viewController storyboardIdentifier="LeftViewController" id="Nln-ac-VgQ" customClass="NavBarViewController" customModule="SustainSB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LeftViewController" title="Left View Controller" id="Nln-ac-VgQ" customClass="NavBarViewController" customModule="SustainSB" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AZZ-VX-bOQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -50,7 +67,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ztK-B0-wW8" customClass="IconCell" customModule="SustainSB" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IconCell" id="ztK-B0-wW8" customClass="IconCell" customModule="SustainSB" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ztK-B0-wW8" id="LSc-eM-XW2">
@@ -76,15 +93,129 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Nln-ac-VgQ" id="aEs-BQ-ejN"/>
+                                    <outlet property="delegate" destination="Nln-ac-VgQ" id="dcJ-t7-uVF"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="RBY-vL-yHZ"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="1EZ-kD-Ttd" id="mZp-vM-NoK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xN8-Cd-cXz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-610.14492753623188" y="137.94642857142856"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="3jR-JM-YQ7">
+            <objects>
+                <viewController id="b4c-zE-CFX" customClass="HomeViewController" customModule="SustainSB" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ulZ-f0-tOg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pageControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="lVB-Ny-8Db">
+                                <rect key="frame" x="20" y="290" width="374" height="37"/>
+                            </pageControl>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NXO-Il-BVu">
+                                <rect key="frame" x="40" y="341" width="334" height="213.5"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C2H-iw-hjT">
+                                <rect key="frame" x="40" y="574.5" width="334" height="213.5"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sustainable SB" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k4t-Og-U7c">
+                                <rect key="frame" x="102" y="302" width="210" height="51"/>
+                                <fontDescription key="fontDescription" name="Rockwell-Bold" family="Rockwell" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o6c-8l-1Rt">
+                                <rect key="frame" x="0.0" y="17" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Santa Barbara" id="pyL-fR-fm7">
+                                        <barButtonItem key="leftBarButtonItem" title="Navies" id="rNw-kW-pwZ"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kcy-2t-BWw">
+                                <rect key="frame" x="0.0" y="96" width="414" height="208"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="220" id="abI-SL-VDP"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="z98-pB-wfD">
+                                    <size key="itemSize" width="416" height="200"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="YuM-FP-QEp">
+                                        <rect key="frame" x="0.0" y="4" width="416" height="200"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wUG-fT-o5u">
+                                            <rect key="frame" x="0.0" y="0.0" width="416" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" tag="111" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tTe-HY-Tj9">
+                                                    <rect key="frame" x="34" y="35" width="350" height="200"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tTe-HY-Tj9" firstAttribute="leading" secondItem="wUG-fT-o5u" secondAttribute="leading" id="Ndd-zg-ZT5"/>
+                                                <constraint firstAttribute="trailing" secondItem="tTe-HY-Tj9" secondAttribute="trailing" id="TpA-jY-YJC"/>
+                                                <constraint firstAttribute="bottom" secondItem="tTe-HY-Tj9" secondAttribute="bottom" id="V7h-W3-ovf"/>
+                                                <constraint firstItem="tTe-HY-Tj9" firstAttribute="top" secondItem="wUG-fT-o5u" secondAttribute="top" id="gCX-Pj-4fL"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="416" height="200"/>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="b4c-zE-CFX" id="mY3-Uu-jiU"/>
+                                    <outlet property="delegate" destination="b4c-zE-CFX" id="oL9-fL-fE3"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="pC2-rV-Vk4" firstAttribute="trailing" secondItem="lVB-Ny-8Db" secondAttribute="trailing" constant="20" id="2EB-jF-Zjk"/>
+                            <constraint firstItem="kcy-2t-BWw" firstAttribute="top" secondItem="pC2-rV-Vk4" secondAttribute="top" id="3JB-xB-Whm"/>
+                            <constraint firstItem="NXO-Il-BVu" firstAttribute="top" secondItem="k4t-Og-U7c" secondAttribute="bottom" constant="8" symbolic="YES" id="8qE-PG-rvz"/>
+                            <constraint firstItem="C2H-iw-hjT" firstAttribute="top" secondItem="NXO-Il-BVu" secondAttribute="bottom" constant="20" id="BbQ-0E-cRY"/>
+                            <constraint firstItem="k4t-Og-U7c" firstAttribute="top" secondItem="kcy-2t-BWw" secondAttribute="bottom" constant="90" id="Cul-os-0OA"/>
+                            <constraint firstItem="NXO-Il-BVu" firstAttribute="leading" secondItem="pC2-rV-Vk4" secondAttribute="leading" constant="40" id="Ddy-04-cdA"/>
+                            <constraint firstItem="pC2-rV-Vk4" firstAttribute="trailing" secondItem="C2H-iw-hjT" secondAttribute="trailing" constant="40" id="EXs-9T-he9"/>
+                            <constraint firstItem="pC2-rV-Vk4" firstAttribute="bottom" secondItem="C2H-iw-hjT" secondAttribute="bottom" constant="20" id="Hlf-Is-Lm4"/>
+                            <constraint firstItem="lVB-Ny-8Db" firstAttribute="leading" secondItem="pC2-rV-Vk4" secondAttribute="leading" constant="20" id="InZ-bI-C2y"/>
+                            <constraint firstItem="C2H-iw-hjT" firstAttribute="width" secondItem="NXO-Il-BVu" secondAttribute="width" id="MAF-Ft-zJ7"/>
+                            <constraint firstItem="k4t-Og-U7c" firstAttribute="leading" secondItem="pC2-rV-Vk4" secondAttribute="leading" constant="100" id="OQH-dm-NBk"/>
+                            <constraint firstItem="kcy-2t-BWw" firstAttribute="trailing" secondItem="pC2-rV-Vk4" secondAttribute="trailing" id="Ptk-dn-36n"/>
+                            <constraint firstItem="lVB-Ny-8Db" firstAttribute="bottom" secondItem="kcy-2t-BWw" secondAttribute="bottom" constant="-5" id="UfW-7o-nfE"/>
+                            <constraint firstItem="pC2-rV-Vk4" firstAttribute="trailing" secondItem="NXO-Il-BVu" secondAttribute="trailing" constant="40" id="aFx-IQ-Lrf"/>
+                            <constraint firstItem="C2H-iw-hjT" firstAttribute="height" secondItem="NXO-Il-BVu" secondAttribute="height" id="dg2-Qj-bao"/>
+                            <constraint firstItem="kcy-2t-BWw" firstAttribute="leading" secondItem="pC2-rV-Vk4" secondAttribute="leading" id="gIr-eu-QEi"/>
+                            <constraint firstItem="C2H-iw-hjT" firstAttribute="leading" secondItem="pC2-rV-Vk4" secondAttribute="leading" constant="40" id="rIW-TI-lbY"/>
+                            <constraint firstItem="pC2-rV-Vk4" firstAttribute="trailing" secondItem="k4t-Og-U7c" secondAttribute="trailing" constant="100" id="vBb-NF-6mf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="pC2-rV-Vk4"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="brD-zR-xfH"/>
+                    <connections>
+                        <outlet property="pageView" destination="lVB-Ny-8Db" id="lmf-Zh-27w"/>
+                        <outlet property="sliderCollectionView" destination="kcy-2t-BWw" id="0QB-L2-2Nn"/>
+                        <outlet property="stillImage" destination="NXO-Il-BVu" id="JbK-H3-4za"/>
+                        <outlet property="stillImage2" destination="C2H-iw-hjT" id="9aW-Iq-XKC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lU1-wx-3x1" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="882.60869565217399" y="137.94642857142856"/>
         </scene>
     </scenes>
 </document>
